--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
             <div class="carousel-item active">
 
-                <img class="carouselimage mb-3" src="Face1.jpg" alt="Francis-image">
+                <img class="carouselimage mb-3" src="face1.jpg" alt="Francis-image">
                 <h3 class="mb-3">Francis</h3>
                 <span class="material-symbols-outlined">
                     stars
@@ -160,7 +160,7 @@
 
             <div class="carousel-item">
 
-                <img class="carouselimage mb-3" src="Face3.jpg" alt="Jhon-image">
+                <img class="carouselimage mb-3" src="face3.jpg" alt="Jhon-image">
                 <h3 class="mb-3">Radek</h3>
                 <span class="material-symbols-outlined">
                     stars
